@@ -1543,7 +1543,7 @@ extern int select_p_job_resized(job_record_t *job_ptr, node_record_t *node_ptr)
 			gres_list = node_ptr->gres_list;
 		gres_ctld_job_dealloc(job_ptr->gres_list_alloc, gres_list, n,
 				      job_ptr->job_id, node_ptr->name,
-				      old_job);
+				      old_job, true);
 		gres_node_state_log(gres_list, node_ptr->name);
 
 		if (node_usage[i].alloc_memory < job->memory_allocated[n]) {
