@@ -2342,7 +2342,7 @@ static int _rm_job_from_nodes(struct cr_record *cr_ptr, job_record_t *job_ptr,
 
 			gres_ctld_job_dealloc(job_gres_list, gres_list,
 					      node_offset, job_ptr->job_id,
-					      node_ptr->name, old_job);
+					      node_ptr->name, old_job, false);
 			gres_node_state_log(gres_list, node_ptr->name);
 		}
 
@@ -2747,7 +2747,7 @@ static int _rm_job_from_one_node(job_record_t *job_ptr, node_record_t *node_ptr,
 	else
 		gres_list = node_ptr->gres_list;
 	gres_ctld_job_dealloc(job_ptr->gres_list_alloc, gres_list, node_offset,
-			      job_ptr->job_id, node_ptr->name, old_job);
+			      job_ptr->job_id, node_ptr->name, old_job, true);
 	gres_node_state_log(gres_list, node_ptr->name);
 
 	return _decr_node_job_cnt(node_inx, job_ptr, pre_err);
